--- a/homepage.html
+++ b/homepage.html
@@ -127,7 +127,7 @@
     </main>    
     
     <footer>
-        <p>&copy; 2024 ZikNet. Tous droits réservés.</p>
+        <p>&copy; 2024 ZikNet. All rights reserved.</p>
     </footer>
 </body>
 </html>
