--- a/myapp/public/profile-setup.html
+++ b/myapp/public/profile-setup.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZikNet - Profile Setup</title>
-    <link rel="stylesheet" href="styles-home.css">
-    <script src="script-profile-setup.js" defer></script>
+    <link rel="stylesheet" href="css/styles-home.css">
+    <script src="js/script-profile-setup-form.js" defer></script>
 </head>
 
 <body>
