--- a/myapp/public/profile.html
+++ b/myapp/public/profile.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ZikNet - My Profile</title>
-        <link rel="stylesheet" href="styles-profile.css">
-        <script src="script-profile.js" defer></script>
+        <link rel="stylesheet" href="css/styles-profile.css">
+        <script src="js/script-profile.js" defer></script>
     </head>
 
     <body>
