--- a/myapp/public/profile-setup.html
+++ b/myapp/public/profile-setup.html
@@ -5,22 +5,100 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZikNet - Profile Setup</title>
-    <link rel="stylesheet" href="css/styles-home.css">
+    <link rel="stylesheet" href="css/styles-profile-setup.css">
     <script src="js/script-profile-setup-form.js" defer></script>
 </head>
 
 <body>
-    <h1>Profile Setup</h1>
-    <form id="profile-setup-form">
-        <input type="text" id="username" placeholder="Username" required><br>
-        <input type="date" id="birthdate" placeholder="Birthdate" required><br>
-        <input type="text" id="nationality" placeholder="Nationality" required><br>
-        <input type="text" id="city" placeholder="City" required><br>
-        <input type="text" id="country" placeholder="Country" required><br>
-        <input type="text" id="bio" placeholder="Bio" required><br>
-        <input type="text" id="favoriteGenres" placeholder="Favorite Genres" required><br>
-        <input type="url" id="profilePicture" placeholder="Profile Picture" required><br>
-        <button type="submit">Register</button>
-    </form>
+
+    <header class="main-nav fixed-nav">
+        <h1>ZikNet</h1>
+        <nav>
+            <ul>
+                <li><a href="homepage.html">Home</a></li>
+                <li><a href="profile.html">My Profile</a></li>
+                <li><a href="courses.html">Courses</a></li>
+                <li><a href="exercices.html">Exercices</a></li>
+                <li><a href="opportunities.html">Opportunities</a></li>
+                <li><a href="messages.html">Messages</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <aside class="sidebar fixed-nav">
+        <nav>
+            <ul>
+                <li><a href="profile-setup.html">Edit Profile</a></li>
+                <li><a href="profile-settings.html">Settings</a></li>
+                <li><a href="index.html">Log Out</a></li>
+            </ul>
+        </nav>
+    </aside>
+
+    <main>
+        <form id="profile-setup-form" aria-labelledby="form-title">
+            <h1 id="form-title" style="color: #a55318;">Profile Setup</h1>
+            <fieldset>
+                <legend>Personal Information</legend>
+                <label for="first-name">First name:</label>
+                <input type="text" id="first-name" name="first-name" aria-required="true">
+                
+                <label for="last-name" class="last-name">Last name:</label>
+                <input type="text" id="last-name" name="last-name" aria-required="true"><br><br>
+
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" placeholder="example@example.com" aria-required="true">
+
+                <label for="phone" class="phone">Phone number:</label>
+                <input type="tel" id="phone" name="phone" placeholder="+country_code 0000000000"><br><br>
+
+                <label for="nationality">Nationality:</label>
+                <select id="nationality" name="nationality" required></select>
+
+                <label for="country" class="country">Country of Residence:</label>
+                <select id="country" name="country" required></select><br><br>
+
+                <label for="city">City of Residence:</label>
+                <input type="text" id="city" name="city" required>
+
+                <label for="birthday" class="birthday">Birthday:</label>
+                <input type="date" id="birthday" name="birthday"><br><br>
+
+                <label for="bio">Bio:</label><label for="username" class="username">Username:</label><input type="text" id="username" name="username" required><br>
+                <textarea id="bio" name="bio" rows="6" required></textarea>
+                
+                <span id="username-error" style="color: red;"></span>
+            </fieldset>
+
+            <fieldset>
+                <legend>Preferences</legend>
+                <label>Preferred contact method:</label><br>
+                <input type="radio" id="email-contact" name="contact-method" value="Email" aria-checked="false">
+                <label for="email-contact">Email</label><br>
+                <input type="radio" id="phone-contact" name="contact-method" value="Phone" aria-checked="false">
+                <label for="phone-contact">Phone</label><br><br>
+
+                <label>Gender:</label><br>
+                <input type="radio" id="male" name="gender" value="Male" aria-checked="false">
+                <label for="male">Male</label><br>
+                <input type="radio" id="female" name="gender" value="Female" aria-checked="false">
+                <label for="female">Female</label><br>
+                <input type="radio" id="prefer-not-to-say" name="prefer-not-to-say" value="Prefer not to say" aria-checked="false">
+                <label for="prefer-not-to-say">Prefer not to say</label><br><br>
+            </fieldset>
+
+            <fieldset>
+                <legend>CV</legend>
+                <label for="cv">Upload a file:</label>
+                <input type="file" id="cv" name="cv"><br><br>
+            </fieldset>
+
+            <a href="profile.html>"><input type="submit" value="Save"></a>
+        </form>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 ZikNet. All rights reserved.</p>
+    </footer>
 </body>
 </html>
