--- a/myapp/public/index.html
+++ b/myapp/public/index.html
@@ -20,17 +20,14 @@
             </div>
 
             <div class="form">
-                <p class="form">
-                    <form id="registration-form">
-                        <input type="text" name="firstname" placeholder="First name" required><br>
-                        <input type="text" name="lastname" placeholder="Last name" required><br>
-                        <input type="email" name="email" id="email" placeholder="E-mail address" required><br>
-                        <input type="password" name="password" placeholder="Password" required><br>
-                        <input type="submit" value="Register">
-                    </form>
-                    Have an account already ?  
-                    <a href="login.html">Log in</a>
-                </p>
+                <form id="registration-form">
+                    <input type="text" name="firstname" placeholder="First name" required><br>
+                    <input type="text" name="lastname" placeholder="Last name" required><br>
+                    <input type="email" name="email" id="email" placeholder="E-mail address" required><br>
+                    <input type="password" name="password" placeholder="Password" required><br>
+                    <input type="submit" value="Register">
+                </form>
+                <p>Have an account already? <a href="login.html">Log in</a></p>
             </div>
         </div>
     </div>
