--- a/myapp/public/profile-setup.html
+++ b/myapp/public/profile-setup.html
@@ -69,7 +69,10 @@
                 <input type="text" id="username" name="username" required><br>
                 <textarea id="bio" name="bio" rows="6" required></textarea>
                 
-                <span id="username-error" style="color: red;"></span>
+                <span id="username-error" style="color: red;"></span><br><br>
+
+                <label for="profile-photo">Choose a profile picture:</label>
+                <input type="file" name="profile-photo" id="profile-photo" accept="image/*">
             </fieldset>
 
             <fieldset>
