--- a/myapp/public/profile-setup.html
+++ b/myapp/public/profile-setup.html
@@ -54,7 +54,7 @@
 
                 <label for="nationality">Nationality:</label>
                 <select id="nationality" name="nationality" required></select>
-
+                
                 <label for="country" class="country">Country of Residence:</label>
                 <select id="country" name="country" required></select><br><br>
 
@@ -71,8 +71,8 @@
                 
                 <span id="username-error" style="color: red;"></span><br><br>
 
-                <label for="profile-photo">Choose a profile picture:</label>
-                <input type="file" name="profile-photo" id="profile-photo" accept="image/*">
+                <label for="profilePhoto">Choose a profile picture:</label>
+                <input type="file" name="profilePhoto" id="profilePhoto" accept="image/*">
             </fieldset>
 
             <fieldset>
@@ -98,7 +98,7 @@
                 <input type="file" id="cv" name="cv"><br><br>
             </fieldset>
 
-            <a href="profile.html"><input type="submit" value="Save"></a>
+            <input type="submit" value="Save">
         </form>
     </main>
 
