--- a/myapp/public/homepage.html
+++ b/myapp/public/homepage.html
@@ -17,7 +17,7 @@
                 <li><a href="homepage.html">Home</a></li>
                 <li><a href="profile.html">My Profile</a></li>
                 <li><a href="courses.html">Courses</a></li>
-                <li><a href="exercices.html">Exercices</a></li>
+                <li><a href="exercises.html">Exercices</a></li>
                 <li><a href="opportunities.html">Opportunities</a></li>
                 <li><a href="messages.html">Messages</a></li>
             </ul>
@@ -129,5 +129,6 @@
     <footer>
         <p>&copy; 2024 ZikNet. All rights reserved.</p>
     </footer>
+
 </body>
 </html>
