--- a/myapp/public/profile.html
+++ b/myapp/public/profile.html
@@ -16,7 +16,7 @@
                     <li><a href="homepage.html">Home</a></li>
                     <li><a href="profile.html">My Profile</a></li>
                     <li><a href="courses.html">Courses</a></li>
-                    <li><a href="exercices.html">Exercices</a></li>
+                    <li><a href="exercises.html">Exercices</a></li>
                     <li><a href="opportunities.html">Opportunities</a></li>
                     <li><a href="messages.html">Messages</a></li>
                 </ul>
