--- a/myapp/public/opportunities.html
+++ b/myapp/public/opportunities.html
@@ -65,6 +65,6 @@
             <p>&copy; 2024 ZikNet. All rights reserved.</p>
         </footer>
 
-        <script src="js/styles-opportunities.js"></script>
+        <script src="js/script-opportunities.js"></script>
     </body>
 </html>
