--- a/myapp/public/profile-setup.html
+++ b/myapp/public/profile-setup.html
@@ -41,13 +41,10 @@
             <fieldset>
                 <legend>Personal Information</legend>
                 <label for="firstname">First name:</label>
-                <input type="text" id="firstname" name="firstname" aria-required="true">
+                <input type="text" id="firstname" name="firstname" placeholder="First name" aria-required="true">
                 
                 <label for="lastname" class="lastname">Last name:</label>
-                <input type="text" id="lastname" name="lastname" aria-required="true"><br><br>
-
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" placeholder="example@example.com" aria-required="true">
+                <input type="text" id="lastname" name="lastname" placeholder="Last name" aria-required="true"><br><br>
 
                 <label for="phone" class="phone">Phone number:</label>
                 <input type="tel" id="phone" name="phone" placeholder="+country_code 0000000000"><br><br>
@@ -59,14 +56,11 @@
                 <select id="country" name="country" required></select><br><br>
 
                 <label for="city">City of Residence:</label>
-                <input type="text" id="city" name="city" required>
-
-                <label for="birthday" class="birthday">Birthday:</label>
-                <input type="date" id="birthday" name="birthday"><br><br>
+                <input type="text" id="city" name="city" placeholder="City" required><br><br>
 
                 <label for="bio">Bio:</label>
                 <label for="username" class="username">Username:</label>
-                <input type="text" id="username" name="username" required><br>
+                <input type="text" id="username" name="username" placeholder="Username" required><br>
                 <textarea id="bio" name="bio" rows="6" required></textarea>
                 
                 <span id="username-error" style="color: red;"></span><br><br>
